# rust-semverver

./: .gitattributes  .gitignore  Cargo.toml  README.md  rust-toolchain
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  style.yml
ci/: run.sh  setup-toolchain.sh
scripts/: toolchain-version
src/: .lib.rs.swp  changes.rs  lib.rs  mapping.rs  mismatch.rs  translate.rs  traverse.rs  typeck.rs
src/semcheck/: .mapping.rs.swp  .mod.rs.swp  .translate.rs.swp  .traverse.rs.swp  .typeck.rs.swp  .util.rs.swp  changes.rs  mapping.rs  mod.rs  traverse.rs  typeck.rs  util.rs
tests/: examples.rs  full.rs
tests/cases/addition/: stdout
tests/cases/addition_path/: stdout
tests/cases/addition_use/: stdout  stdout_api_guidelines
tests/cases/auto_traits/: new.rs  old.rs  stdout
tests/cases/bounds/: stdout
tests/cases/consts/: stdout
tests/cases/enums/: stdout
tests/cases/func/: new.rs  old.rs  stdout
tests/cases/infer_regress/: .new.rs.swp  .old.rs.swp  .stdout.swp  stdout
tests/cases/inherent_impls/: stdout
tests/cases/kind_change/: stdout
tests/cases/macros/: stdout
tests/cases/mix/: stdout
tests/cases/pathologic_paths/: stdout
tests/cases/regions/: stdout
tests/cases/removal/: stdout
tests/cases/removal_path/: stdout
tests/cases/removal_use/: stdout
tests/cases/sealed_traits/: stdout
tests/cases/structs/: new.rs  old.rs  stdout
tests/cases/trait_impls/: stdout
tests/cases/traits/: stdout
tests/cases/ty_alias/: stdout
tests/full_cases/: config-0.13.0-0.13.1.linux  config-0.13.0-0.13.1.windows_msvc  libc-0.2.28-0.2.31.linux  libc-0.2.28-0.2.31.osx  log-0.3.4-0.3.8.linux  log-0.3.4-0.3.8.osx  log-0.3.4-0.3.8.windows_msvc  rmpv-0.4.0-0.4.1.linux  rmpv-0.4.0-0.4.1.windows_msvc
