[package]
name = "semverver"
description = "Automatic verification of SemVer adherence in Rust library crates"
repository = "https://github.com/rust-lang/rust-semverver"
readme = "README.md"
keywords = ["semver", "plugin"]
categories = ["development-tools", "development-tools::cargo-plugins"]
version = "0.1.47"
authors = ["Inokentiy Babushkin <twk@twki.de>"]
license-file = "LICENSE"
edition = "2018"
exclude = ["/ci/*", "/.github/*", "/doc"]

[dependencies]
cargo = "0.56"
crates-io = "0.33" # Keep in sync with version pulled by Cargo
curl = "0.4.38"
env_logger = "0.9"
anyhow = "1.0.44"
log = "0.4"
semver = "1.0" # Keep in sync with version pulled by Cargo
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"

[dev-dependencies]
quickcheck = "1.0"

[package.metadata.rust-analyzer]
# This crate uses `#![feature(rustc_private)]`
# cf. https://github.com/rust-analyzer/rust-analyzer/pull/7891
rustc_private = true
