[package]
name = "semverver"
description = "Automatic verification of SemVer adherence in Rust library crates"
repository = "https://github.com/rust-lang/rust-semverver"
readme = "README.md"
keywords = ["semver", "plugin"]
categories = ["development-tools", "development-tools::cargo-plugins"]
version = "0.1.48"
authors = ["Inokentiy Babushkin <twk@twki.de>"]
license-file = "LICENSE"
edition = "2018"
exclude = ["/ci/*", "/.github/*", "/doc"]

[dependencies]
cargo = "0.60"
crates-io = "0.33" # Keep in sync with version pulled by Cargo
curl = "0.4.42"
env_logger = "0.9"
anyhow = "1.0.55"
log = "0.4"
semver = "1.0" # Keep in sync with version pulled by Cargo
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
quote = "=1.0.10"
proc-macro2 = "=1.0.32"

[dev-dependencies]
quickcheck = { version = "1.0", default-features = false }

[package.metadata.rust-analyzer]
# This crate uses `#![feature(rustc_private)]`
# cf. https://github.com/rust-analyzer/rust-analyzer/pull/7891
rustc_private = true
